# config

./: .gitignore  CMakeLists.txt  config.cpp  config.hpp
include/: config.hpp
include/config/: config.hpp
include/private/: CustomExceptions.hpp
perl/: ConfigParser.pm
src/: config.cpp
tests/: sampleconf.cfg  test1.cpp
